[gd_scene load_steps=23 format=3 uid="uid://dlunabrdogtq7"]

[ext_resource type="Texture2D" uid="uid://b8jmy0dqj02ro" path="res://assets/Finger 01.png" id="1_ibkli"]
[ext_resource type="Script" uid="uid://b7i7tnbt8spwh" path="res://scripts/Game.gd" id="1_qbsmt"]
[ext_resource type="Texture2D" uid="uid://c8qs5h4rhsgjh" path="res://assets/Free Pixel Art Forest/PNG/Background layers/Layer_0010_1.png" id="2_aug50"]
[ext_resource type="PackedScene" uid="uid://bcpplx41n15uu" path="res://scenes/click_feedback.tscn" id="2_g4kob"]
[ext_resource type="Texture2D" uid="uid://1udeim5ihnbv" path="res://assets/Free Pixel Art Forest/PNG/Background layers/Layer_0002_7.png" id="3_kiw3p"]
[ext_resource type="Texture2D" uid="uid://c6v3oebdvy1km" path="res://assets/Free Pixel Art Forest/PNG/Background layers/Layer_0004_Lights.png" id="4_400sg"]
[ext_resource type="Texture2D" uid="uid://ddh7bnulnr26m" path="res://assets/Free Pixel Art Forest/PNG/Background layers/Layer_0007_Lights.png" id="5_g4kob"]
[ext_resource type="AudioStream" uid="uid://d2lqhmqvgerhb" path="res://Audio/Fingerfist Ost 05.mp3" id="7_kiw3p"]
[ext_resource type="Texture2D" uid="uid://o84s4exwsvfa" path="res://assets/BoxSackBase.png" id="8_400sg"]
[ext_resource type="AudioStream" uid="uid://b17h3d586mk5r" path="res://Audio/BoxSound1.wav" id="8_qy1jj"]
[ext_resource type="AudioStream" uid="uid://duk17ewh4xgh6" path="res://Audio/BoxSound2.wav" id="9_3xj3m"]
[ext_resource type="AudioStream" uid="uid://wv1c8tk7ch17" path="res://Audio/BoxPunch01.wav" id="11_a8wo8"]
[ext_resource type="AudioStream" uid="uid://dt6ftmxs8phlw" path="res://Audio/BoxPunch02.mp3" id="12_attvq"]
[ext_resource type="AudioStream" uid="uid://dsp21su6j3epe" path="res://Audio/BoxPunch03.mp3" id="13_bneo8"]
[ext_resource type="AudioStream" uid="uid://c0fsbjhoy6tu6" path="res://Audio/BoxPunch04.mp3" id="14_ocgqw"]
[ext_resource type="AudioStream" uid="uid://cirflbajr54fx" path="res://Audio/BoxPunch05.mp3" id="15_jbgew"]
[ext_resource type="AudioStream" uid="uid://doicjx40w8rk7" path="res://Audio/BoxPunch06.mp3" id="16_a85ww"]
[ext_resource type="AudioStream" uid="uid://drso6dywxqkdi" path="res://Audio/BoxPunch07.mp3" id="17_jhsr3"]
[ext_resource type="AudioStream" uid="uid://brgaar6u0c06e" path="res://Audio/BoxPunch08.mp3" id="18_0bq3a"]
[ext_resource type="AudioStream" uid="uid://xbppsmmniub0" path="res://Audio/BoxPunch09.mp3" id="19_754j2"]
[ext_resource type="AudioStream" uid="uid://cwhwhslpss8ag" path="res://Audio/BoxPunch10.mp3" id="20_i4jil"]
[ext_resource type="PackedScene" uid="uid://d1ght2py6617r" path="res://spawner.tscn" id="22_attvq"]

[node name="Game" type="Node2D"]
script = ExtResource("1_qbsmt")

[node name="GameCamera" type="Camera2D" parent="."]
position = Vector2(585, 325)

[node name="Background" type="CanvasLayer" parent="."]

[node name="Main" parent="Background" instance=ExtResource("22_attvq")]

[node name="ClickFeedback" parent="Background" instance=ExtResource("2_g4kob")]
z_index = 100
z_as_relative = false
position = Vector2(17.5481, 12.7433)

[node name="Layer0004Lights" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(569, 292)
scale = Vector2(1.22953, 0.724464)
texture = ExtResource("2_aug50")

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(578.5, 772)
scale = Vector2(1.2403, 1)
texture = ExtResource("3_kiw3p")

[node name="Layer0004Lights2" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(605, -57)
texture = ExtResource("4_400sg")

[node name="Layer0007Lights" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(792, 120)
texture = ExtResource("5_g4kob")

[node name="BoxFingerSprite" type="Sprite2D" parent="Background"]
position = Vector2(717, 439)
scale = Vector2(5.26563, 5.54688)
texture = ExtResource("1_ibkli")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kiw3p")
volume_db = -25.297
autoplay = true

[node name="BoxSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_qy1jj")
volume_db = -20.0

[node name="BoxSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_3xj3m")
volume_db = -20.0

[node name="BoxPunch01" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_a8wo8")
volume_db = -20.0

[node name="BoxPunch02" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_attvq")
volume_db = -20.0

[node name="BoxPunch03" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_bneo8")
volume_db = -20.0

[node name="BoxPunch04" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_ocgqw")
volume_db = -20.0

[node name="BoxPunch05" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_jbgew")
volume_db = -20.0

[node name="BoxPunch06" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_a85ww")
volume_db = -20.0

[node name="BoxPunch07" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_jhsr3")
volume_db = -20.0

[node name="BoxPunch08" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_0bq3a")
volume_db = -20.0

[node name="BoxPunch09" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_754j2")
volume_db = -20.0

[node name="BoxPunch10" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_i4jil")
volume_db = -20.0

[node name="GameTimer" type="Timer" parent="."]

[node name="PauseScreen" type="CanvasLayer" parent="."]

[node name="PauseScoreLabel" type="Label" parent="PauseScreen"]
offset_left = 195.0
offset_top = 13.0
offset_right = 708.0
offset_bottom = 198.0
theme_override_font_sizes/font_size = 66
text = "Score: 0
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ContinueButton" type="Button" parent="PauseScreen"]
offset_left = 286.0
offset_top = 437.0
offset_right = 589.0
offset_bottom = 521.0
text = "Next Round
"
metadata/_edit_use_anchors_ = true

[node name="NextRoundTimeLabel" type="Label" parent="PauseScreen"]
offset_left = 274.0
offset_top = 208.0
offset_right = 604.0
offset_bottom = 357.0
theme_override_font_sizes/font_size = 28
text = "Time next Round:
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="GameScreen" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="GameScreen"]
visibility_layer = 2
z_index = 1
offset_left = 12.0
offset_top = 63.0
offset_right = 526.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 55
text = "Time:"
metadata/_edit_use_anchors_ = true

[node name="BoxSack" type="Sprite2D" parent="GameScreen"]
position = Vector2(180, 408)
scale = Vector2(6.45313, 9.64063)
texture = ExtResource("8_400sg")

[node name="EndScreen" type="CanvasLayer" parent="."]

[node name="FinalScore" type="Label" parent="EndScreen"]
z_index = 1
offset_left = 183.0
offset_top = 137.0
offset_right = 577.0
offset_bottom = 304.0
theme_override_font_sizes/font_size = 77
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="EndScreen"]
offset_right = 1162.0
offset_bottom = 647.0
color = Color(0.0947514, 0, 0, 0.768627)
metadata/_edit_use_anchors_ = true

[node name="RetryButton" type="Button" parent="EndScreen"]
z_index = 1
offset_left = 122.0
offset_top = 286.0
offset_right = 254.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 44
text = "Retry"
metadata/_edit_use_anchors_ = true

[node name="HighscoreLabel" type="Label" parent="EndScreen"]
offset_left = 899.0
offset_right = 1123.0
offset_bottom = 649.0
theme_override_font_sizes/font_size = 22
metadata/_edit_use_anchors_ = true

[node name="ShopButton" type="Button" parent="EndScreen"]
offset_left = 400.0
offset_top = 314.0
offset_right = 591.0
offset_bottom = 386.0
text = "Shop"

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="pressed" from="EndScreen/RetryButton" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="EndScreen/ShopButton" to="." method="_on_shop_pressed"]
